plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'  // Spring REST Docs 관련
    id 'com.epages.restdocs-api-spec' version '0.19.0'
}

group = 'com.clover'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    snippetsDir = file('build/generated-snippets')
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    runtimeOnly 'com.mysql:mysql-connector-j'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.18.2'

    testImplementation 'com.h2database:h2:2.2.224'

    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mysql'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('testRestDocs', Test) {
    useJUnitPlatform()
    description = 'Run only REST Docs tests for API documentation'
    group = 'verification'

    // 문서화 테스트 대상 파일만 포함 (ControllerTest 등)
    include '**/*ControllerTest.class'

    // REST Docs 스니펫 위치 지정
    outputs.dir snippetsDir

    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
}

asciidoctor {
    inputs.dir snippetsDir
    dependsOn testRestDocs
}

openapi3 {
    title = 'BookFlow API'
    description = '책 커뮤니티 서비스 API 명세'
    version = '1.0.0'
    format = 'json'
    outputFileNamePrefix = 'openapi3'
    outputDirectory = 'build/api-spec'
    snippetsDirectory = snippetsDir
    server = 'http://localhost:8080'
}

tasks.register('copyOpenApi', Copy) {
    dependsOn testRestDocs
    from(layout.buildDirectory.dir("api-spec")) {
        include "openapi3.json"
    }
    into(layout.projectDirectory.dir("src/main/resources/static/docs"))
}

// 문서화 관련 전체
tasks.register('buildDocs') {
    group = 'documentation'
    description = 'Run REST Docs tests and generate API documentation'

    dependsOn tasks.named('testRestDocs')
    dependsOn tasks.named('asciidoctor')
    dependsOn tasks.named('openapi3')
    dependsOn tasks.named('copyOpenApi')
}